# exiftool-cli

./: .gitignore  LICENSE  MANPAGE.md  README.md  pyproject.toml
Formula/: imgmeta.rb
src/exiftool_cli/: __init__.py  __main__.py  cli.py  core.py  formatters.py  interactive.py  utils.py
tests/: __init__.py  conftest.py  test_batch.py  test_export.py  test_extract.py  test_qa.py  test_remove.py
